# template_python_project

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml.template  Dockerfile  LICENSE.txt  Taskfile.yml  build_version  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  start.py
{{ cookiecutter.project_slug }}/logger/: custom.py
{{ cookiecutter.project_slug }}/logger/logging_config/: config.yaml  custom_config.yaml
{{ cookiecutter.project_slug }}/src/config/: builder.py  constants.py  get_name.py  project_info.py
{{ cookiecutter.project_slug }}/{{cookiecutter.pkg_folder}}/config/: __init__.py  builder.py  get_name.py  get_version.py  logger.py  settings.py
